Fix alignment; See: websharks/comment-mail#187

--- a/comment-mail-pro/client-s/css/menu-pages.css
+++ b/comment-mail-pro/client-s/css/menu-pages.css
@@ -769,11 +769,11 @@ Menu page heading styles.
 	float: right;
 	clear: right;
 	margin: 1em 0 0 0;
-	text-align: center;
+	text-align: right;
 }
 .comment-mail-menu-page .pmp-heading .pmp-heading-options a
 {
-	line-height: 1.5em;
+	line-height: 1.75em;
 	text-decoration: none;
 	margin: 0 .5em 0 .5em;
 	display: inline-block;
@@ -782,13 +782,13 @@ Menu page heading styles.
 {
 	float: right;
 	clear: right;
-	margin: 0.5em 0 0 0;
-	text-align: center;
+	margin: 0.5em 0.5em 0 0;
+	text-align: right;
 }
 .comment-mail-menu-page .pmp-heading .plugin-menu-page-restore-defaults
 {
 	float: right;
-	margin: 0 1em 0 0;
+	margin: 0 0.3em 0 0;
 }
 
 /*
